--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
        <h6>This is the smallest header</h6>
        
        <a href="bootstrap.html"><button>Go to bootstrap page</button></a>
-   
+       <a href="bio.html"><button>Go to Bio page</button></a>
    
     </body>
 
